2006-07-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/autoload.el (make-autoload): Use new arg.

	* custom.el (custom-autoload): Add `noset' argument.
	(custom-push-theme): Don't autoload the variable, let callers do it.
	(custom-theme-set-variables): Autoload the variable if necessary.

	* cus-edit.el (custom-variable-state-set): If the variable was
	originally set outside custom, but to the same value as the default,
	consider it to be standard.

	* Makefile.in (mh-loaddefs.el): Finish setting up the default empty
	file *before* telling Emacs to add the autoloads, in case it fails.

	* progmodes/sh-script.el (sh-quoted-subshell): Don't match escaped `.
	Use `cond', push', and `dolist'.

2006-07-17  Richard Stallman  <rms@gnu.org>

	* image-mode.el (tar-superior-buffer, archive-superior-buffer):
	Add defvars to silence warnings.

2006-07-17  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/compile.el (compilation-mode-font-lock-keywords):
	Don't highlight "Compiling file" messages as error.

	* dired-aux.el (dired-compress-file): Confirm again if gzipped
	file already exists.

2006-07-16  Thien-Thi Nguyen  <ttn@gnu.org>

	* find-file.el (ff-special-constructs): Doc fix.  Also, for C/C++
	entry, don't assign to free var; simply return the extracted filename.
	(ff-treat-as-special): Incorporate common preamble from callers.
	(ff-other-file-name, ff-find-the-other-file):
	Update call to ff-treat-as-special.

	* progmodes/ada-mode.el (ada-mode): Rewrite ff-special-constructs init.

2006-07-16  Mathias Dahl  <mathias.dahl@gmail.com>

	* tumme.el (tumme-get-comment): Fix bug.

2006-07-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* files.el: Remove spurious * in docstrings.

2006-07-14  Ken Manheimer  <ken.manheimer@gmail.com>

	* allout.el (allout-run-unit-tests-on-load): Rectify docstring
	grammar.
	(allout-beginning-of-current-line): Beware beginning of buffer.
	Also, a comment is simplified.